# gtk_project

./: CMakeLists.txt  main.c
interfaces/: interface.ui  secondary.ui
